# libgeotiff

libgeotiff/: CMakeLists.txt
libgeotiff/cmake/: CMakeLists.txt  project-config.cmake.in
libgeotiff/libxtiff/: CMakeLists.txt
